plugins {
    id 'java'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

dependencies {
    implementation project(':pacman-lib')
    implementation libs.tinylog_api
    implementation libs.tinylog_impl
}